fixed generator logic

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,6 @@ keystore {
 
 generator {
    length = 3
-   storage = storage.ser
-   isForced = false
+   storage = /media/legioner/5E4C53C25A90493F/Projects/storage.ser
+   isForced = true
 }
