optimized serialisation, refactoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ keystore {
 }
 
 generator {
-   length = 3
+   length = 4
    storage = /media/legioner/5E4C53C25A90493F/Projects/storage.ser
-   isForced = true
+   isForced = false
 }
