--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <name>sonatype snapshots repo</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
+
     <dependencies>
 <!--
         Logging
@@ -35,6 +43,11 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>[2.23.1-SNAPSHOT,)</version>
         </dependency>
 
 
